WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208237
REGRESSION(
r257299
): [GTK] Test fast/css/button-height.html is failing since
r257299
https://bugs.webkit.org/show_bug.cgi?id=208237
Summary
REGRESSION(r257299): [GTK] Test fast/css/button-height.html is failing since ...
Carlos Garcia Campos
Reported
2020-02-26 05:18:43 PST
The new theming code doesn't use the same border size for button and input[type="button"].
Attachments
Patch
(2.53 KB, patch)
2020-02-26 05:20 PST
,
Carlos Garcia Campos
aperez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2020-02-26 05:20:19 PST
Created
attachment 391740
[details]
Patch
Carlos Garcia Campos
Comment 2
2020-02-28 01:30:38 PST
Committed
r257626
: <
https://trac.webkit.org/changeset/257626
>
Carlos Garcia Campos
Comment 3
2020-02-28 02:29:27 PST
***
Bug 188972
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug