REGRESSION(r257299): Test fast/css/button-height.html is failing since r257299 https://bugs.webkit.org/show_bug.cgi?id=208237

Reviewed by Adrian Perez de Castro.

The new theming code doesn't use the same border size for button and input[type="button"].

* platform/adwaita/ThemeAdwaita.cpp:
(WebCore::ThemeAdwaita::controlBorder const): Use the same border for all buttons.
* platform/adwaita/ThemeAdwaita.h:

Canonical link: https://commits.webkit.org/221295@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257626 268f45cc-cd09-0410-ab3c-d52691b4dbfc